some chapter 12 additions and edits

--- a/exercises/12_08_ex_16.tex
+++ b/exercises/12_08_ex_16.tex
@@ -1,4 +1,4 @@
-{$\ds z=\cos\big(\pi x+\frac{\pi}2y\big)$,\quad $x=st^2$,\quad $y=s^2t$;\quad $s=1$, $t=1$
+{$\ds z=\cos\left(\pi x+\frac{\pi}2y\right)$,\quad $x=st^2$,\quad $y=s^2t$;\quad $s=1$, $t=1$
 }
 {\begin{enumerate}
 	\item $\frac{\partial z}{\partial s} = -\pi\sin(\pi x+\pi y/2)(t^2) -\frac12\pi\sin(\pi x+\pi y/2)(2st) = -\pi\Big(t^2\sin(\pi x+ \pi y/2) + st\sin(\pi x+\pi y/2)\Big)$;\\
