--- a/text/12_Partial_Derivatives.tex
+++ b/text/12_Partial_Derivatives.tex
@@ -203,13 +203,13 @@ $$f_x,\quad f_y,\quad f_{xx},\quad f_{yy},\quad f_{xy}\quad \text{and}\quad f_{y
 	
 	$\ds f_y(x,y) = -\frac{2x^3}{y^3}$
 	
-	$\ds f_{xx}(x,y) = \frac{\partial}{\px}\big(f_x\big) = \frac{\partial}{\px}\big(\frac{3x^2}{y^2}\big) = \frac{6x}{y^2}$
+	$\ds f_{xx}(x,y) = \frac{\partial}{\px}\big(f_x\big) = \frac{\partial}{\px}\left(\frac{3x^2}{y^2}\right) = \frac{6x}{y^2}$
 		
-		$\ds f_{yy}(x,y) = \frac{\partial}{\py}\big(f_y\big) = \frac{\partial}{\py}\big(-\frac{2x^3}{y^3}\big) = \frac{6x^3}{y^4}$
+		$\ds f_{yy}(x,y) = \frac{\partial}{\py}\big(f_y\big) = \frac{\partial}{\py}\left(-\frac{2x^3}{y^3}\right) = \frac{6x^3}{y^4}$
 		
-		$\ds f_{xy}(x,y) = \frac{\partial}{\py}\big(f_x\big) = \frac{\partial}{\py}\big(\frac{3x^2}{y^2}\big) = -\frac{6x^2}{y^3}$
+		$\ds f_{xy}(x,y) = \frac{\partial}{\py}\big(f_x\big) = \frac{\partial}{\py}\left(\frac{3x^2}{y^2}\right) = -\frac{6x^2}{y^3}$
 		
-		$\ds f_{yx}(x,y) = \frac{\partial}{\px}\big(f_x\big) = \frac{\partial}{\px}\big(-\frac{2x^3}{y^3}\big) = 
+		$\ds f_{yx}(x,y) = \frac{\partial}{\px}\big(f_x\big) = \frac{\partial}{\px}\left(-\frac{2x^3}{y^3}\right) = 
 -\frac{6x^2}{y^3}$	
 
 \item	$\ds f(x,y) = e^x\sin(x^2y)$
