--- a/exercises/12_02_exercises.tex
+++ b/exercises/12_02_exercises.tex
@@ -9,3 +9,4 @@
 \exsetinput{exercises/12_02_exset_01}
 \exsetinput{exercises/12_02_exset_02}
 \exsetinput{exercises/12_02_exset_03}
+\exsetinput{exercises/12_02_exset_04}
