--- a/exercises/12_03_exset_02.tex
+++ b/exercises/12_03_exset_02.tex
@@ -14,7 +14,9 @@
 \exinput{exercises/12_03_ex_20}
 \exinput{exercises/12_03_ex_21}
 \exinput{exercises/12_03_ex_22}
+\exinput{exercises/12_03_ex_35}
 \exinput{exercises/12_03_ex_23}
 \exinput{exercises/12_03_ex_24}
 \exinput{exercises/12_03_ex_25}
+\exinput{exercises/12_03_ex_36}
 \exinput{exercises/12_03_ex_26}
