Hopefully finally got rid of the stupid awful use of the "implicit function" phrase BECAUSE THEY"RE NOT FUNCTIONS

--- a/exercises/07_02_ex_16.tex
+++ b/exercises/07_02_ex_16.tex
@@ -18,8 +18,8 @@ Rotate about:
 }
 {\begin{enumerate}
 \item $\pi^2/2$
-\item $\pi^2/2-4\pi\sinh^{-1} (1)$
-\item $\pi^2/2+4\pi\sinh^{-1} (1)$
+\item $\pi^2/2-4\pi\ln\left(1+\sqrt{2}\right)$
+\item $\pi^2/2+4\pi\ln\left(1+\sqrt{2}\right)$
 %\item $\pi/3$
 \end{enumerate}
 }
