--- a/exercises/07_03_ex_16.tex
+++ b/exercises/07_03_ex_16.tex
@@ -17,9 +17,9 @@ Rotate about:
 \end{minipage}
 }
 {\begin{enumerate}
-\item $2\pi(\sqrt{2}-1)$
-\item $2\pi(1-\sqrt{2}+\sinh^{-1} (1))$
-%\item $\pi^2/2+4\pi\sinh^{-1} (1)$
+\item $2\pi\left(\sqrt{2}-1\right)$
+\item $2\pi\left(1-\sqrt{2}+\ln\left(1+\sqrt{2}\right)\right)$
+%\item $\pi^2/2+4\pi\ln\left(1+\sqrt{2}\right)$
 %\item $\pi/3$
 \end{enumerate}
 }
