--- a/exercises/12_06_exset_05.tex
+++ b/exercises/12_06_exset_05.tex
@@ -1,5 +1,5 @@
 {\noindent In Exercises}
-{, an implicitly defined function of $x$, $y$ and $z$ is given along with a point $P$ that lies on the surface. Use the gradient $\nabla F$ to:
+{, an implicitly defined relation of $x$, $y$ and $z$ is given along with a point $P$ that lies on the surface. Use the gradient $\nabla F$ to:
 \begin{enumerate}
 	\item [(a)] find the equation of the normal line to the surface at $P$, and
 	\item	[(b)] find the equation of the plane tangent  to the surface at $P$.
