--- a/text/09_Conic_Sections.tex
+++ b/text/09_Conic_Sections.tex
@@ -144,7 +144,7 @@ These two distances are equal. Setting $d_1=d_2$, we can solve for $y$ in terms 
 	\mfigure{.4}{Illustrating the construction of an ellipse with pins, pencil and string.}{fig:ellipse_def}{figures/figellipse_def}
 	
 	We can again find an algebraic equation for an ellipse using this geometric definition. Let the foci be located along the $x$-axis, $c$ units from the origin. Let these foci be labeled as $F_1 = (-c,0)$ and $F_2=(c,0)$. Let $P=(x,y)$ be a point on the ellipse. The sum of distances from $F_1$ to $P$ ($d_1$) and from $F_2$ to $P$ ($d_2$) is a constant $d$. That is, $d_1+d_2=d$. Using the Distance Formula, we have 
-	$$\sqrt{(x+c)^2+y^2} + \sqrt{(x-c)^2+y^2} = d.$$ Using a fair amount of algebra can produce the following equation of an ellipse (note that the equation is an implicitly defined function; it has to be, as an ellipse fails the Vertical Line Test):
+	$$\sqrt{(x+c)^2+y^2} + \sqrt{(x-c)^2+y^2} = d.$$ Using a fair amount of algebra can produce the following equation of an ellipse (note that the equation is an implicitly defined relation, and not a function; it has to be, as an ellipse fails the Vertical Line Test):
 	$$\frac{x^2}{\left(\frac d2\right)^2} + \frac{y^2}{\left(\frac d2\right)^2-c^2} = 1.$$
 	This is not particularly illuminating, but by making the substitution $a=d/2$ and $b=\sqrt{a^2-c^2}$, we can rewrite the above equation as 
 	$$\frac{x^2}{a^2} + \frac{y^2}{b^2} = 1.$$ This choice of $a$ and $b$ is not without reason; as shown in Figure \ref{fig:ellipse_label}, the values of $a$ and $b$ have geometric meaning in the graph of the ellipse. 
