--- a/text/13_Triple_Integration.tex
+++ b/text/13_Triple_Integration.tex
@@ -271,7 +271,7 @@ The following example shows us how to do this when dealing with more complicated
 
 \example{ex_trip2b}{Finding the projection of a curve in space onto the coordinate planes}{
 Consider the surfaces $z=3-x^2-y^2$ and $z=2y$, as shown in Figure \ref{fig:trip2bb}(a). The curve of their intersection is shown, along with the projection of this curve into the coordinate planes, shown dashed. Find the equations of the projections into the coordinate planes.}
-{The two surfaces are $z=3-x^2-y^2$ and $z=2y$. To find where they intersect, it is natural to set them equal to each other: $3-x^2-y^2=2y$. This is an implicit function of $x$ and $y$ that gives all points $(x,y)$ in the $x$-$y$ plane where the $z$ values of the two surfaces are equal. 
+{The two surfaces are $z=3-x^2-y^2$ and $z=2y$. To find where they intersect, it is natural to set them equal to each other: $3-x^2-y^2=2y$. This is an implicit relation of $x$ and $y$ that gives all points $(x,y)$ in the $x$-$y$ plane where the $z$ values of the two surfaces are equal. 
 
 \mtable{.5}{Finding the projections of the curve of intersection in Example \ref{ex_trip2b}.}{fig:trip2bb}{%
 \begin{tabular}{c}
@@ -296,7 +296,7 @@ Consider the surfaces $z=3-x^2-y^2$ and $z=2y$, as shown in Figure \ref{fig:trip
 \end{tabular}
 }
 
-We can rewrite this implicit function by completing the square:
+We can rewrite this implicit relation by completing the square:
 $$3-x^2-y^2=2y \quad \Rightarrow \quad y^2+2y+x^2=3\quad \Rightarrow \quad (y+1)^2+x^2=4.$$ Thus in the $x$-$y$ plane the projection of the intersection is a circle with radius 2, centered at $(0,-1)$.
 
 To project onto the $x$-$z$ plane, we do a similar procedure: find the $x$ and $z$ values where the $y$ values on the surface are the same. We start by solving the equation of each surface for $y$. In this particular case, it works well to actually solve for $y^2$:
