enlarged parentheses around fraction in 6.7 Exercise 50

--- a/exercises/06_09_ex_53.tex
+++ b/exercises/06_09_ex_53.tex
@@ -1,4 +1,4 @@
-{$\ds \int \cos(\frac1x)\ dx$}
+{$\ds \int \cos\left(\frac1x\right)\ dx$}
 {$\ds x\cos\left(\frac1x\right) +\Si\left(\frac1x\right) +C$
 }
 
