--- a/exercises/12_07_ex_01.tex
+++ b/exercises/12_07_ex_01.tex
@@ -1,4 +1,4 @@
-{T/F: Theorem \ref{thm:multi_critical_point} states that if $f$ has a critical point at $P$, then $f$ has a relative extrema at $P$.
+{T/F: Theorem \ref{thm:multi_critical_point} states that if $f$ has a critical point at $P$, then $f$ has a relative extremum at $P$.
 }
 {
 F; it is the ``other way around.''
