--- a/exercises/12_07_exercises.tex
+++ b/exercises/12_07_exercises.tex
@@ -6,3 +6,6 @@
 \printproblems
 \exsetinput{exercises/12_07_exset_01}
 \exsetinput{exercises/12_07_exset_02}
+\exinput{exercises/12_07_ex_20}
+\exinput{exercises/12_07_ex_21}
+\exinput{exercises/12_07_ex_22}
