--- a/exercises/12_07_exset_01.tex
+++ b/exercises/12_07_exset_01.tex
@@ -8,6 +8,7 @@
 \exinput{exercises/12_07_ex_09}
 \exinput{exercises/12_07_ex_12}
 \exinput{exercises/12_07_ex_11}
+\exinput{exercises/12_07_ex_19}
 \exinput{exercises/12_07_ex_10}
 \exinput{exercises/12_07_ex_17}
 \exinput{exercises/12_07_ex_18}
