--- a/exercises/13_01_exercises.tex
+++ b/exercises/13_01_exercises.tex
@@ -8,3 +8,6 @@
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/13_01_exset_02}
 \exsetinput{exercises/13_01_exset_03}
+\exsetinput{exercises/13_01_exset_04}
+\exinput{exercises/13_01_ex_28}
+\exinput{exercises/13_01_ex_29}
