--- a/text/12_Extrema.tex
+++ b/text/12_Extrema.tex
@@ -10,7 +10,7 @@ Given a function $z=f(x,y)$, we are often interested in points where $z$ takes o
 	
 	\item	If $f(x_0,y_0)\geq f(x,y)$ for all $(x,y)$ in $S$, then $f$ has an \textbf{absolute maximum} at $P$; if $f(x_0,y_0)\leq f(x,y)$ for all $(x,y)$ in $S$, then $f$ has an \textbf{absolute minimum} at $P$.
 	
-	\item		If $f$ has a relative maximum or minimum at $P$, then $f$ has a \textbf{relative extrema} at $P$; if $f$ has an absolute maximum or minimum at $P$, then $f$ has a \textbf{absolute extrema} at $P$.
+	\item		If $f$ has a relative maximum or minimum at $P$, then $f$ has a \textbf{relative extremum} at $P$; if $f$ has an absolute maximum or minimum at $P$, then $f$ has na \textbf{absolute extremum} at $P$.
 \end{enumerate}
 }
 
@@ -25,7 +25,7 @@ If $f$ has a relative or absolute maximum at $P=(x_0,y_0)$, it means every curve
 }
 
 \theorem{thm:multi_critical_point}{Critical Points and Relative Extrema}
-{Let $z=f(x,y)$ be defined on an open set $S$ containing $P=(x_0,y_0)$. If $f$ has a relative extrema at $P$, then $P$ is a critical point of $f$.\index{extrema!relative}\index{critical point}
+{Let $z=f(x,y)$ be defined on an open set $S$ containing $P=(x_0,y_0)$. If $f$ has a relative extremum at $P$, then $P$ is a critical point of $f$.\index{extrema!relative}\index{critical point}
 }
 
 Therefore, to find relative extrema, we find the critical points of $f$ and determine which correspond to relative maxima, relative minima, or neither. The following examples demonstrate this process.\\
@@ -116,7 +116,7 @@ However, this is not the case. Functions $f$ exist where $f_{xx}$ and $f_{yy}$ a
 
 To account for this, consider $D = f_{xx}f_{yy}-f_{xy}f_{yx}$. Since $f_{xy}$ and $f_{yx}$ are equal when continuous (refer back to Theorem \ref{thm:mixed_partial}), we can rewrite this as $D = f_{xx}f_{yy}-f_{xy}^{\,2}$. $D$ can be used to test whether the concavity at a point changes depending on direction. If $D>0$, the concavity does not switch (i.e., at that point, the graph is concave up or down in all directions). If $D<0$, the concavity does switch. If $D=0$, our test fails to determine whether concavity switches or not. We state the use of $D$ in the following theorem.
 
-\theorem{thm:multi_second_test}{Second Derivative Test}
+\theorem{thm:multi_second_test}{Second Derivative Test for Functions of Two Variables}
 {Let $z=f(x,y)$ be differentiable on an open set containing $P = (x_0,y_0)$, and let 
 \index{Second Derivative Test}\index{maximum!relative/local}\index{minimum!relative/local}\index{saddle point}
 $$D = f_{xx}(x_0,y_0)f_{yy}(x_0,y_0)-f_{xy}^{\,2}(x_0,y_0).$$
@@ -126,10 +126,11 @@ $$D = f_{xx}(x_0,y_0)f_{yy}(x_0,y_0)-f_{xy}^{\,2}(x_0,y_0).$$
 	\item	If $D<0$, then $P$ is a saddle point of $f$.
 	\item If $D=0$, the test is inconclusive.
 \end{enumerate}
+\textbf{Note: }We can substitute $f_{xx}(x_0,y_0)$ with $f_{yy}(x_0,y_0)$ in (1) and (2) above.  If $D>0$, then $f_{xx}(x_0,y_0)$ and $f_{yy}(x_0,y_0)$ are either both positive or both negative.
 }
 
-We first practice using this test with the function in the previous example, where we visually determined we had a relative maximum and a saddle point.
-\clearpage
+We first practice using this test with the function in the previous example, where we visually determined we had a relative maximum and a saddle point.\\
+%\clearpage
 
 \example{ex_multi_extreme4}{Using the Second Derivative Test}{
 Let $f(x,y) = x^3-3x-y^2+4y$ as in Example \ref{ex_multi_extreme3}. Determine whether the function has a relative minimum, maximum, or saddle point at each critical point.}
@@ -255,8 +256,8 @@ f_2(-3/8) = 41/8=5.125  \qquad&\Rightarrow \qquad f(-3/8,-0.125) = 5.125\\
 f_2(0) = 1 \qquad&\Rightarrow \qquad f(0,1) = 4.
 \end{align*}
 
-Finally, we evaluate $f$ along the right edge of the triangle, where $y = -3/2x+1$. 
-$$f(x,y) = f(x,-3/2x+1) = x^2-(-3/2x+1)^2+5 = -\frac54x^2+3x+4=f_3(x).$$
+Finally, we evaluate $f$ along the right edge of the triangle, where $y = -\frac32 x+1$. 
+$$f(x,y) = f\left(x,-\frac32 x+1\right) = x^2-\left(-\frac32 x+1\right)^2+5 = -\frac54x^2+3x+4=f_3(x).$$
 The critical points of $f_3(x)$ are:
 $$\fp_3(x) = 0 \qquad \Rightarrow \qquad x=6/5=1.2.$$
 We evaluate $f_3$ at this critical point and at the endpoints of the interval $[0,2]$:
