--- a/exercises/13_03_ex_15.tex
+++ b/exercises/13_03_ex_15.tex
@@ -7,7 +7,7 @@
 }
 {\begin{enumerate}
 	\item This is impossible to integrate with rectangular coordinates as $e^{-(x^2+y^2)}$ does not have an antiderivative in terms of elementary functions.
-	\item	$\ds \int_0^{2\pi}\int_0^a re^{r^2}\ dr\ d\theta = \pi(1-e^{-a^2})$.
+	\item	$\ds \int_0^{2\pi}\int_0^a re^{r^2}\ dr\ d\theta = \pi \left(1-e^{-a^2}\right)$.
 	\item		$\ds \lim_{a\to\infty} \pi(1-e^{-a^2})=\pi$. This implies that there is a finite volume under the surface $e^{-(x^2+y^2)}$ over the entire $x$-$y$ plane.
 \end{enumerate}
 }
